--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Personalisable new tabs",
   "main": "js/main.js",
   "dependencies": {
+    "firebase": "^2.1.1",
     "gulp": "^3.8.10"
   },
   "devDependencies": {
