Fixes message overflow in chat panel

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
 
-  "name": "Album",
+  "name": "GoodMorningAnna",
 
   "description": "Private photos from friends and family to keep your browsing happy.",
 
