--- a/manifest.json
+++ b/manifest.json
@@ -18,6 +18,6 @@
   ],
 
   "chrome_url_overrides": {
-    "newtab": "build/album.html"
+    "newtab": "fluxRefactor/reactFluxTemplate/index.html"
   }
 }
