--- a/fluxRefactor/package.json
+++ b/fluxRefactor/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/KiaFathi/reactFluxTemplate",
   "dependencies": {
+    "firebase": "^2.1.1",
     "flux": "^2.0.1",
-    "react": "^0.11.2"
+    "react": "^0.11.2",
+    "reactfire": "^0.4.0"
   },
   "devDependencies": {
     "browserify": "^5.12.0",
