--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
 node_modules/
-build.pem
-build.crx
-buildNotes.txt
-goodMorningAnna.crx
+goodMorningAnna/goodMorningAnna.crx
+goodMorningAnna/build/assets/**/*
+goodMorningAnna/build/**/*.js
 goodMorningAnna.pem
 build/bundle.js
 build/images
 build/css/font-awesome-4.2.0/
-fluxRefactor/build/assets/**/*
-fluxRefactor/build/**/*.js
