Modifies manifest to accept connections to localhost for developmet

--- a/goodMorningAnna/manifest.json
+++ b/goodMorningAnna/manifest.json
@@ -14,7 +14,8 @@
     "https://api.forecast.io",
     "http://*.google.com/",
     "unlimitedStorage",
-    "geolocation"
+    "geolocation",
+    "http://localhost/*"
   ],
 
   "chrome_url_overrides": {
