--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1.6",
+    "bluebird": "^2.8.0",
+    "express": "^4.11.0",
     "knex": "^0.7.3",
     "pg": "^4.2.0",
     "restify": "^2.8.4"
