--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "bluebird": "^2.8.0",
     "express": "^4.11.0",
     "knex": "^0.7.3",
+    "morgan": "^1.5.1",
     "pg": "^4.2.0",
     "restify": "^2.8.4"
   }
