--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1.6",
+    "bcrypt": "^0.8.1",
     "bluebird": "^2.8.0",
+    "body-parser": "^1.10.1",
     "express": "^4.11.0",
     "knex": "^0.7.3",
     "morgan": "^1.5.1",
+    "multer": "^0.1.7",
+    "nodemailer": "^1.3.0",
     "pg": "^4.2.0",
     "restify": "^2.8.4"
   }
