--- a/server/package.json
+++ b/server/package.json
@@ -14,11 +14,14 @@
     "bluebird": "^2.8.0",
     "body-parser": "^1.10.1",
     "express": "^4.11.0",
+    "jwt-simple": "^0.2.0",
     "knex": "^0.7.3",
+    "moment": "^2.9.0",
     "morgan": "^1.5.1",
     "multer": "^0.1.7",
     "nodemailer": "^1.3.0",
     "pg": "^4.2.0",
-    "restify": "^2.8.4"
+    "restify": "^2.8.4",
+    "util": "^0.10.3"
   }
 }
