--- a/server/package.json
+++ b/server/package.json
@@ -13,14 +13,18 @@
     "bcrypt": "^0.8.1",
     "bluebird": "^2.8.0",
     "body-parser": "^1.10.1",
+    "chai": "^1.10.0",
     "express": "^4.11.0",
     "jwt-simple": "^0.2.0",
     "knex": "^0.7.3",
+    "mocha": "^2.1.0",
     "moment": "^2.9.0",
     "morgan": "^1.5.1",
     "multer": "^0.1.7",
     "nodemailer": "^1.3.0",
+    "nodemailer-wellknown": "^0.1.5",
     "pg": "^4.2.0",
+    "request-promise": "^0.3.3",
     "restify": "^2.8.4",
     "util": "^0.10.3"
   }
